# ronin

./: .env.example  LICENSE  README.md
notebooks/: test_haystack.ipynb
ronin/: pyproject.toml
ronin/notebooks/: test_haystack.ipynb  test_llm_abstraction.ipynb
ronin/ronin/: __init__.py  config.py  llm.py  typing_mixin.py
ronin/ronin/assistants/: __init__.py  base.py  chat.py  coach.py  resume_writer.py
ronin/ronin/assistants/base/: chained.py  chat.py  critic.py  protocol.py  registry.py
ronin/ronin/cli/: README.md  __init__.py  chat.py  main.py
ronin/ronin/dependencies/: __init__.py  _langchain.py  haystack_imports.py  langchain_imports.py
ronin/ronin/haystack/: llm.py
ronin/ronin/langchain/: llm.py
ronin/ronin/llm/: base.py  loader.py
ronin/ronin/prompts/: defaults.py  templates.py
tidder/: README.md  home.py  pyproject.toml
tidder/notebooks/: process_youtube_subtitles.ipynb
tidder/tidder/: dependencies.py  generic.py  polars.py  typing_mixin.py
tidder/tidder/data/: __init__.py  captions.py  loader.py  videos.py
tidder/tidder/data/post_processing/: __init__.py  base.py
tidder/tidder/data/processing/: __init__.py  base.py  video.py
tidder/tidder/models/: bertopic.py
tidder/tidder/models/clustering/: __init__.py  builder.py  experiments.py  gaussian_mixture.py  kmeans.py  spectral_clustering.py
tidder/tidder/transforms/: __init__.py  base.py  dimensionality_reduction.py  tokenizer.py  tracker.py
